# Capstone-2

./: .gitignore  README.md  main.py  pyproject.toml
Notebook/: ABI_EDA.ipynb  VJ_EDA.ipynb  d_eda.ipynb  exp.ipynb  final.ipynb
model/: forecast_model.pkl
time_series/: main.py  pipeline.py
