[project]
name = "time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "dagshub>=0.5.9",
    "fastapi>=0.115.7",
    "matplotlib>=3.10.0",
    "mlflow>=2.21.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pmdarima>=2.0.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.43.2",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]

[tool.setuptools.packages.find]
include = ["time_series*"]
